k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: devsu-demo
spec:
  selector:
    app: demo-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
